force-app/main/default/objects/Reveal_Request__c/Reveal_Request__c.object-meta.xml
<CustomObject>
    <description>Candidate-controlled identity reveal requests from employers.</description>
    <label>Reveal Request</label>
    <nameField>
        <displayFormat>RR-{00000}</displayFormat>
        <label>Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reveal Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>