force-app/main/default/objects/Reveal_Request__c/fields/CampaignMember_Id__c.field-meta.xml
<CustomField>
    <fullName>CampaignMember_Id__c</fullName>
    <externalId>true</externalId>
    <label>Campaign Member ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>