force-app/main/default/objects/Reveal_Request__c/fields/Employer__c.field-meta.xml
<CustomField>
    <fullName>Employer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Reveal Requests</relationshipLabel>
    <relationshipName>Reveal_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>